fix z-index for mobile on map question-mark

--- a/app/assets/stylesheets/pages/_farms.scss
+++ b/app/assets/stylesheets/pages/_farms.scss
@@ -34,7 +34,7 @@
     }
     display: none;
     position: absolute;
-    z-index: 999;
+    z-index: 1;
     margin-top: 14px;
     margin-left: 16px;
     background: #7C7977;
@@ -65,7 +65,7 @@
     height: 85px;
     background-color:white;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     margin-top: 50px;
     margin-left: 16px;
     border-radius: 5px;
